[package]
name = "ngrust"
version = "1.0.4"
edition = "2021"
description = "A CLI tool inspired by Angular CLI, built with Rust."
license = "MIT"
repository = "https://github.com/maxiim3/ngrust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
clap = "2.30.0"
toml = "0.5.8"
serde_derive = "1.0.124"
serde = { version = "1.0", features = ["derive"] }
dialoguer = "0.9"
strum = "0.20.0"
strum_macros = "0.20.1"
